fixed BlogList flex wrap issue in Safari

--- a/src/components/BlogPostList/BlogPostList.scss
+++ b/src/components/BlogPostList/BlogPostList.scss
@@ -4,7 +4,7 @@
 }
 
 .post {
-  flex: 1;
+  flex: 1 0 auto;
   margin: .5rem;
 }
 
